--- a/train.ipynb
+++ b/train.ipynb
@@ -1,5 +1,59 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "26c82191",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "imgpath = \"reaction_images/angry.jpg\"\n",
+    "img = cv2.imread(imgpath)\n",
+    "img = cv2.resize(img,(300,300))\n",
+    "cv2.imshow(\"Reaction Output\",img)\n",
+    "cv2.waitKey(0)  # 👈 keeps window open until key press\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cb94046",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap = cv2.VideoCapture(0)\n",
+    "if not cap.isOpened():\n",
+    "    print(\"❌ Webcam not detected!\")\n",
+    "    exit()\n",
+    "\n",
+    "while True:\n",
+    "    frame ,ret = cap.read()\n",
+    "    if not ret:\n",
+    "        print(\"⚠ Can't receive frame. Exiting...\")\n",
+    "        break\n",
+    "\n",
+    "    cv2.imshow(\"Live Webcam\", frame)\n",
+    "\n",
+    "    # Press 'q' to exit\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a39c421",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "base",
